--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -147,16 +147,22 @@
 
         const text = await response.text();
 
-        if (text.includes("OK")) {
-          document.getElementById("successMsg").style.display = "block";
-          form.reset();
+        // Normalize response (removes whitespace / hidden characters)
+        const clean = text.trim().toUpperCase();
 
-          setTimeout(() => {
-            document.getElementById("successMsg").style.display = "none";
-          }, 2000);
+      if (clean === "OK") {
+        const msg = document.getElementById("successMsg");
+        msg.style.display = "block";
+
+        form.reset();
+
+        setTimeout(() => {
+        msg.style.display = "none";
+        }, 2500);
         } else {
-          alert("ERROR: " + text);
-        }
+        alert("Unexpected response from server:\n" + text);
+      }
+
 
       } catch (err) {
         alert("Request Failed: " + err);
