--- a/dashboard.html
+++ b/dashboard.html
@@ -2,81 +2,306 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
   <title>797 Distillery Ferm Dashboard</title>
 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+  <!-- Google Charts -->
   <script src="https://www.gstatic.com/charts/loader.js"></script>
 
   <style>
+    /* ==============================
+       GLOBAL COLORS & BASE STYLES
+       ============================== */
+    :root {
+      --bg: #0f1318;
+      --panel: #171d24;
+      --copper: #d8843e;
+      --teal: #00c9a7;
+      --text: #f5f7fa;
+      --muted: #9aa4b2;
+      --danger: #ff4d4f;
+    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      background:#111;
-      color:white;
-      font-family:Arial, sans-serif;
-      padding:20px;
+      font-family: "Roboto", sans-serif;
+      background: radial-gradient(circle at top left, #1e252f, #05070a);
+      color: var(--text);
+      padding: 20px;
     }
+
+    .dashboard { max-width: 1300px; margin: auto; }
+    header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
+    header h1 { font-size: 1.6rem; letter-spacing: 0.05em; }
+    header p { font-size: 0.9rem; color: var(--muted); }
+    .badge {
+      padding: 6px 12px; border-radius: 999px;
+      border: 1px solid var(--copper); font-size: .8rem;
+      text-transform: uppercase;
+    }
+
+    .grid { display: grid; grid-template-columns: 2fr 1fr; gap: 20px; }
+
     .card {
-      background:#1a1a1a;
-      padding:20px;
-      border-radius:12px;
-      margin-bottom:20px;
+      background: linear-gradient(135deg, #171d24, #10141b);
+      border-radius: 16px;
+      padding: 16px 18px;
+      box-shadow: 0 18px 35px rgba(0,0,0,0.55);
+      border: 1px solid rgba(255,255,255,0.05);
     }
-    #gravity_chart { width:100%; height:350px; }
-    .value-block { margin-right:20px; }
-    .value { font-size:1.5rem; }
+
+    .chart-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 6px;
+    }
+
+    .chart-header h2 {
+      font-size: 1rem;
+      margin-bottom: 4px;
+    }
+
+    .chart-header p {
+      color: var(--muted);
+      font-size: .85rem;
+    }
+
+    /* ==============================
+       CHART CONTAINERS
+       - #gravity_chart: mobile-only combined chart
+       - #chart_black + #chart_green: desktop-only side-by-side charts
+       ============================== */
+    #gravity_chart,
+    #chart_black,
+    #chart_green {
+      width: 100%;
+      height: 320px;
+      margin-top: 10px;
+    }
+
+    /* Desktop side-by-side chart layout */
+    .desktop-charts {
+      display: flex;
+      gap: 16px;
+      margin-top: 10px;
+    }
+
+    .chart-panel {
+      flex: 1;
+    }
+
+    /* Range dropdown styling */
+    #rangeSelect {
+      background: #111720;
+      color: var(--text);
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,0.12);
+      padding: 6px 10px;
+      font-size: 0.8rem;
+      outline: none;
+    }
+
+    /* Sensor summary tiles */
+    .sensor-block {
+      margin-bottom: 28px;
+      padding-bottom: 16px;
+      border-bottom: 1px solid rgba(255,255,255,0.07);
+    }
+
+    .sensor-header {
+      display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px;
+    }
+    .sensor-name { font-size: 1.2rem; font-weight: 500; }
+    .pill {
+      padding: 4px 10px; border-radius: 999px; border: 1px solid;
+      font-size: 0.75rem; letter-spacing: 0.06em; text-transform: uppercase;
+    }
+    .pill.online { color: var(--teal); border-color: var(--teal); }
+    .pill.offline { color: var(--danger); border-color: var(--danger); }
+    .pill.copper.online { color: var(--copper); border-color: var(--copper); }
+
+    .value-area { display: flex; gap: 20px; margin-top: 6px; }
+    .value-block { flex: 1; }
+    .value-label { font-size: .75rem; color: var(--muted); margin-bottom: 4px; }
+    .value { font-size: 1.6rem; font-weight: 600; }
+    .value small { font-size: .8rem; color: var(--muted); }
+
+    .chip-row { display: flex; gap: 8px; margin-top: 10px; flex-wrap: wrap; }
+    .chip {
+      background: rgba(255,255,255,0.05);
+      padding: 4px 8px;
+      border-radius: 999px;
+      font-size: .75rem;
+    }
+    .chip strong.copper { color: var(--copper); }
+    .chip strong.teal { color: var(--teal); }
+
+    .footer-note { margin-top: 10px; text-align: right; color: var(--muted); font-size: .75rem; }
+
+    /* ==============================
+       RESPONSIVE BEHAVIOR
+       - Desktop (>= 900px): show TWO charts (black + green), hide combined.
+       - Mobile (< 900px): show ONE combined chart, hide the two.
+       ============================== */
+    @media (min-width: 900px) {
+      #gravity_chart { display: none; }       /* hide mobile chart */
+      .desktop-charts { display: flex; }      /* show side-by-side charts */
+    }
+
+    @media (max-width: 899px) {
+      #gravity_chart { display: block; }      /* show combined chart on mobile */
+      .desktop-charts { display: none; }      /* hide side-by-side charts */
+    }
+
   </style>
 </head>
 
 <body>
+  <div class="dashboard">
 
-<h1>797 Distillery • Fermentation Dashboard</h1>
-<p>Black & Green Tilt Live Readings</p>
+    <!-- ==========================
+         HEADER
+         ========================== -->
+    <header>
+      <div>
+        <h1>797 Distillery • Fermentation Dashboard</h1>
+        <p>Live Tilt telemetry • dual batch monitoring • fermentation curves</p>
+      </div>
+      <div class="badge">REALTIME</div>
+    </header>
 
-<div class="card">
-  <h2>Gravity Chart</h2>
-  <p>Range: <span id="rangeLabel">Today</span></p>
-  <select id="rangeSelect">
-    <option value="1">Today</option>
-    <option value="3">Last 3 days</option>
-    <option value="5">Last 5 days</option>
-    <option value="7">Last 7 days</option>
-  </select>
+    <!-- ==========================
+         MAIN GRID: CHART + TILES
+         ========================== -->
+    <div class="grid">
 
-  <div id="gravity_chart"></div>
-</div>
+      <!-- ==========
+           CHART CARD
+           ========== -->
+      <div class="card">
+        <div class="chart-header">
+          <div>
+            <h2>Gravity Trend</h2>
+            <p>Range: <span id="rangeLabel">Today</span></p>
+          </div>
+          <div>
+            <select id="rangeSelect">
+              <option value="1">Today</option>
+              <option value="3">Last 3 days</option>
+              <option value="5">Last 5 days</option>
+              <option value="7">Last 7 days</option>
+            </select>
+          </div>
+        </div>
 
-<div class="card">
-  <h2>Black Tilt</h2>
-  <div class="value-block">
-    <div>Gravity: <span id="blackGravity">--</span></div>
-    <div>Temp: <span id="blackTemp">--</span></div>
-    <div>ABV: <span id="blackABV">--</span></div>
-    <div id="blackUpdated">Last update: --</div>
+        <!-- MOBILE COMBINED CHART (Black + Green on one chart) -->
+        <div id="gravity_chart"></div>
+
+        <!-- DESKTOP SIDE-BY-SIDE CHARTS -->
+        <div class="desktop-charts">
+          <div class="chart-panel">
+            <h3 style="font-size:0.85rem; color:var(--muted); margin-top:4px;">Black Corn</h3>
+            <div id="chart_black"></div>
+          </div>
+          <div class="chart-panel">
+            <h3 style="font-size:0.85rem; color:var(--muted); margin-top:4px;">Green Corn</h3>
+            <div id="chart_green"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- ==========
+           SENSOR PANEL CARD
+           ========== -->
+      <div class="card">
+
+        <!-- BLACK TILT BLOCK -->
+        <div class="sensor-block">
+          <div class="sensor-header">
+            <div class="sensor-name">Black Tilt</div>
+            <div id="blackStatus" class="pill copper offline">Offline</div>
+          </div>
+
+          <div class="value-area">
+            <div class="value-block">
+              <div class="value-label">Gravity</div>
+              <div id="blackGravity" class="value">--<small>SG</small></div>
+            </div>
+            <div class="value-block">
+              <div class="value-label">Temp</div>
+              <div id="blackTemp" class="value">--<small>°F</small></div>
+            </div>
+            <div class="value-block">
+              <div class="value-label">ABV</div>
+              <div id="blackABV" class="value">--<small>%</small></div>
+            </div>
+          </div>
+
+          <div class="chip-row">
+            <div class="chip">Batch: <strong class="copper">Black Corn</strong></div>
+            <div id="blackUpdated" class="chip">Last update: --</div>
+          </div>
+        </div>
+
+        <!-- GREEN TILT BLOCK -->
+        <div class="sensor-block">
+          <div class="sensor-header">
+            <div class="sensor-name">Green Tilt</div>
+            <div id="greenStatus" class="pill online" style="border-color:var(--teal); color:var(--teal);">Offline</div>
+          </div>
+
+          <div class="value-area">
+            <div class="value-block">
+              <div class="value-label">Gravity</div>
+              <div id="greenGravity" class="value">--<small>SG</small></div>
+            </div>
+            <div class="value-block">
+              <div class="value-label">Temp</div>
+              <div id="greenTemp" class="value">--<small>°F</small></div>
+            </div>
+            <div class="value-block">
+              <div class="value-label">ABV</div>
+              <div id="greenABV" class="value">--<small>%</small></div>
+            </div>
+          </div>
+
+          <div class="chip-row">
+            <div class="chip">Batch: <strong class="teal">Green Corn</strong></div>
+            <div id="greenUpdated" class="chip">Last update: --</div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="footer-note">Auto-refresh every 20 seconds</div>
   </div>
-</div>
 
-<div class="card">
-  <h2>Green Tilt</h2>
-  <div class="value-block">
-    <div>Gravity: <span id="greenGravity">--</span></div>
-    <div>Temp: <span id="greenTemp">--</span></div>
-    <div>ABV: <span id="greenABV">--</span></div>
-    <div id="greenUpdated">Last update: --</div>
-  </div>
-</div>
-
+  <!-- ==========================
+       JAVASCRIPT SECTION
+       ========================== -->
 <script>
 google.charts.load("current", {packages:["corechart"]});
 google.charts.setOnLoadCallback(initDashboard);
 
 const SHEET_ID = "1cV8POWA9l0hlAyZPB1RYLYaqa4T4pXIRzQ3e6C9qkE8";
 const OG = 1.086;
+
 const DATASETS = [
-  { sheet:"Black Corn", key:"black" },
-  { sheet:"Green Corn", key:"green" }
+  { sheet: "Black Corn", key: "black" },
+  { sheet: "Green Corn", key: "green" }
 ];
 
 function initDashboard() {
   document.getElementById("rangeSelect").addEventListener("change", () => {
-    updateRangeLabel(); updateDashboard();
+    updateRangeLabel();
+    updateDashboard();
   });
   updateRangeLabel();
   updateDashboard();
@@ -88,91 +313,200 @@ function getRangeDays() {
 }
 
 function updateRangeLabel() {
-  const d = getRangeDays();
-  document.getElementById("rangeLabel").textContent = d === 1 ? "Today" : `Last ${d} days`;
+  const days = getRangeDays();
+  document.getElementById("rangeLabel").textContent =
+    days === 1 ? "Today" : `Last ${days} days`;
 }
 
 function updateDashboard() {
-  Promise.all(DATASETS.map(ds => loadSheet(ds.sheet))).then(res => {
-    let dataObj = {};
-    DATASETS.forEach((ds,i) => dataObj[ds.sheet] = res[i]);
-    updateTiles(dataObj);
-    drawChart(dataObj);
-  });
+  Promise.all(DATASETS.map(ds => loadSheet(ds.sheet)))
+    .then(res => {
+      let obj = {};
+      DATASETS.forEach((ds, i) => obj[ds.sheet] = res[i]);
+      updateTiles(obj);
+      drawChart(obj);
+    });
 }
 
 function loadSheet(sheet) {
   const q = "select A,B,C where A is not null order by A";
-  const url = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${encodeURIComponent(sheet)}&tq=${encodeURIComponent(q)}`;
-  return fetch(url).then(r=>r.text()).then(t=>JSON.parse(t.substr(47).slice(0,-2)).table);
+  const url =
+    `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${encodeURIComponent(sheet)}&tq=${encodeURIComponent(q)}`;
+
+  return fetch(url)
+    .then(r => r.text())
+    .then(t => JSON.parse(t.substr(47).slice(0, -2)).table);
 }
 
+// TIMESTAMP HELPERS
 function toDate(raw) {
   if (!raw) return new Date();
-  if (typeof raw==="object" && "v" in raw) raw = raw.v;
-  if (typeof raw==="string" && raw.includes("Date(")) {
-    const p = raw.replace("Date(","").replace(")","").split(",").map(Number);
+
+  if (typeof raw === "object") {
+    if ("v" in raw) raw = raw.v;
+    else if ("f" in raw) raw = raw.f;
+  }
+
+  if (typeof raw === "string" && raw.includes("Date(")) {
+    const p = raw.replace("Date(", "").replace(")", "").split(",").map(Number);
     return new Date(p[0], p[1], p[2], p[3], p[4], p[5]);
   }
+
+  if (typeof raw === "number") {
+    const base = new Date(Date.UTC(1899, 11, 30));
+    return new Date(base.getTime() + raw * 86400000);
+  }
+
   const d = new Date(raw);
   return isNaN(d.getTime()) ? new Date() : d;
 }
 
 function parseTS(raw) {
   const d = toDate(raw);
-  return d.toLocaleString("en-US",{hour:"2-digit",minute:"2-digit",month:"short",day:"2-digit"});
+  return d.toLocaleString("en-US", {
+    month: "short", day: "2-digit", year: "numeric",
+    hour: "2-digit", minute: "2-digit",
+    hour12: true, timeZone: "America/Chicago"
+  });
 }
 
+// ABV CALC
 function calcABV(sg) {
+  if (!sg || sg <= 0) return null;
   return (OG - sg) * 131.25;
 }
 
+// TILES
 function updateTiles(data) {
-  updateOne(data["Black Corn"], "black");
-  updateOne(data["Green Corn"], "green");
+  updateTile(data["Black Corn"], "black");
+  updateTile(data["Green Corn"], "green");
 }
 
-function updateOne(table, key) {
-  if (!table || !table.rows.length) return;
+function updateTile(table, key) {
+  const s = id => document.getElementById(id);
 
-  const last = table.rows[table.rows.length - 1].c;
-  const ts = last[0].v;
-  const temp = Number(last[1].v);
-  const sg = Number(last[2].v);
+  if (!table || !table.rows.length) {
+    setOffline(key);
+    return;
+  }
 
-  document.getElementById(`${key}Temp`).textContent = temp.toFixed(1);
-  document.getElementById(`${key}Gravity`).textContent = sg.toFixed(3);
-  document.getElementById(`${key}ABV`).textContent = calcABV(sg).toFixed(2);
-  document.getElementById(`${key}Updated`).textContent = "Last update: " + parseTS(ts);
+  let row = null;
+  for (let i = table.rows.length - 1; i >= 0; i--) {
+    const c = table.rows[i].c;
+    if (c && c[0] && c[1] && c[2]) { row = c; break; }
+  }
+  if (!row) return setOffline(key);
+
+  const ts = row[0].v;
+  const temp = Number(row[1].v);
+  const sg = Number(row[2].v);
+
+  s(`${key}Temp`).innerHTML = `${temp.toFixed(1)}<small>°F</small>`;
+  s(`${key}Gravity`).innerHTML = `${sg.toFixed(3)}<small>SG</small>`;
+  s(`${key}Updated`).textContent = "Last update: " + parseTS(ts);
+
+  const abv = calcABV(sg);
+  s(`${key}ABV`).innerHTML = abv ? `${abv.toFixed(2)}<small>%</small>` : `--<small>%</small>`;
+
+  s(`${key}Status`).textContent = "Online";
+  s(`${key}Status`).classList.add("online");
+  s(`${key}Status`).classList.remove("offline");
 }
 
+function setOffline(key) {
+  const s = id => document.getElementById(id);
+  s(`${key}Status`).textContent = "Offline";
+  s(`${key}Status`).classList.remove("online");
+  s(`${key}Status`).classList.add("offline");
+  s(`${key}Temp`).innerHTML = `--<small>°F</small>`;
+  s(`${key}Gravity`).innerHTML = `--<small>SG</small>`;
+  s(`${key}ABV`).innerHTML = `--<small>%</small>`;
+  s(`${key}Updated`).textContent = "Last update: --";
+}
+
+// CHART
 function extractSeries(table) {
   const out = [];
-  table.rows.forEach(r=>{
+  if (!table || !table.rows) return out;
+
+  table.rows.forEach(r => {
     const c = r.c;
-    if (c && c[0] && c[2]) out.push({time: toDate(c[0].v), sg: Number(c[2].v)});
+    if (c && c[0] && c[2]) {
+      const d = toDate(c[0].v);
+      const sg = Number(c[2].v);
+      if (!isNaN(sg)) out.push({ time: d, gravity: sg });
+    }
   });
+
   return out;
 }
 
-function drawChart(all) {
-  const black = extractSeries(all["Black Corn"]);
-  const green = extractSeries(all["Green Corn"]);
-  const cutoff = new Date().getTime() - getRangeDays()*86400000;
+function drawChart(d) {
+  const black = extractSeries(d["Black Corn"]);
+  const green = extractSeries(d["Green Corn"]);
 
-  const merged = [];
-  black.forEach(p=>{ if(p.time.getTime()>cutoff) merged.push([p.time,p.sg,null]); });
-  green.forEach(p=>{ if(p.time.getTime()>cutoff) merged.push([p.time,null,p.sg]); });
-  merged.sort((a,b)=>a[0]-b[0]);
+  const days = getRangeDays();
+  const now = new Date();
+  const cutoff = now.getTime() - days * 86400000;
+
+  const map = new Map();
+
+  function add(series, key) {
+    series.forEach(p => {
+      if (p.time.getTime() < cutoff) return;
+      const k = p.time.toISOString();
+      if (!map.has(k)) map.set(k, { time: p.time, black: null, green: null });
+      map.get(k)[key] = p.gravity;
+    });
+  }
+
+  add(black, "black");
+  add(green, "green");
+
+  const merged = Array.from(map.values()).sort((a, b) => a.time - b.time);
+  if (merged.length > 200) merged.splice(0, merged.length - 200);
 
   const data = new google.visualization.DataTable();
-  data.addColumn("datetime","Time");
-  data.addColumn("number","Black");
-  data.addColumn("number","Green");
-  merged.forEach(r=>data.addRow(r));
+  data.addColumn("datetime", "Time");
+  data.addColumn("number", "Black Corn");
+  data.addColumn("number", "Green Corn");
 
-  new google.visualization.LineChart(document.getElementById("gravity_chart"))
-    .draw(data,{backgroundColor:"transparent"});
+  merged.forEach(p => data.addRow([p.time, p.black, p.green]));
+
+  const ticks = [];
+  if (merged.length) {
+    let t = new Date(merged[0].time);
+    t.setMinutes(0, 0, 0);
+    const end = merged[merged.length - 1].time;
+    while (t <= end) {
+      ticks.push(new Date(t));
+      t.setHours(t.getHours() + 1);
+    }
+  }
+
+  const options = {
+    backgroundColor: "transparent",
+    legend: { position: "bottom", textStyle: { color: "#cfd8e3" } },
+    hAxis: {
+      textStyle: { color: "#9aa4b2" },
+      gridlines: { color: "#1e2530" },
+      ticks: ticks,
+      format: "h a"
+    },
+    vAxis: {
+      textStyle: { color: "#9aa4b2" },
+      gridlines: { color: "#1e2530" }
+    },
+    chartArea: { left: 60, top: 20, right: 30, bottom: 70 },
+    series: {
+      0: { color: "#d8843e", width: 3 },
+      1: { color: "#00c9a7", width: 3 }
+    }
+  };
+
+  new google.visualization.LineChart(
+    document.getElementById("gravity_chart")
+  ).draw(data, options);
 }
 </script>
 
