--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -68,6 +68,7 @@
   <h1>Enter New Barrel (TEST)</h1>
 
   <form id="barrelForm">
+
     <label>Barrel No.</label>
     <input type="text" name="barrelNo" required />
 
@@ -97,7 +98,7 @@
     </select>
 
     <label>Lot ID</label>
-    <input type="text" name="lotId" id="lotId" readonly />
+    <input type="text" name="lotId" id="lotId" />
 
     <label>Barrel Type</label>
     <input type="text" name="barrelType" placeholder="ex: 53gal Char #3" />
@@ -106,19 +107,19 @@
     <input type="text" name="rcg" />
 
     <label>OPG (auto calculated)</label>
-    <input type="number" step="0.01" name="opg" id="opg" readonly />
-
-    <label>Barrel Doc Link</label>
-    <input type="text" name="docLink" />
+    <input type="number" step="0.01" name="opg" id="opg" />
 
     <label>Notes</label>
     <textarea name="notes" rows="3"></textarea>
+
+    <label>Barrel Doc Link</label>
+    <input type="text" name="docLink" />
 
     <button type="submit">Submit Barrel</button>
   </form>
 
   <script>
-    const SCRIPT_URL = "YOUR_SCRIPT_URL_HERE";  // <-- replace with your real URL
+    const SCRIPT_URL = "YOUR_SCRIPT_URL_HERE"; // <-- replace with your deployed Apps Script URL
 
     // ------------------------------------------------------
     // AUTO CALCULATE OPG
@@ -139,7 +140,7 @@
     gallons.addEventListener("change", updateOPG);
 
     // ------------------------------------------------------
-    // AUTO-ASSIGN LOT ID (GET LAST LOT FROM GOOGLE SCRIPT)
+    // AUTO-SUGGEST NEXT LOT ID (BUT STILL EDITABLE)
     // ------------------------------------------------------
     async function loadNextLotId() {
       try {
@@ -148,16 +149,17 @@
 
         let nextLot = "LOT-001";
 
-        if (lastLot.match(/^LOT-\d+$/)) {
-          let num = parseInt(lastLot.split("-")[1]);
+        if (/^LOT-\d+$/.test(lastLot)) {
+          let num = parseInt(lastLot.replace("LOT-", ""));
           num++;
           nextLot = "LOT-" + String(num).padStart(3, "0");
         }
 
+        // Set the suggested Lot ID, but allow editing
         document.getElementById("lotId").value = nextLot;
 
       } catch (err) {
-        console.error("Lot ID fetch failed:", err);
+        console.error("Lot ID lookup failed:", err);
         document.getElementById("lotId").value = "LOT-001";
       }
     }
