--- a/barrel-entry-test.html
+++ b/barrel-entry-test.html
@@ -97,7 +97,7 @@
     </select>
 
     <label>Lot ID (Auto Generated)</label>
-    <input type="text" name="LotID" placeholder="Auto" disabled />
+    <input type="text" name="LotID" placeholder="Auto" value="" readonly />
 
     <label>Barrel Type</label>
     <input type="text" name="BarrelType" />
@@ -106,7 +106,7 @@
     <input type="text" name="RCG" />
 
     <label>OPG (Auto Calculated)</label>
-    <input type="number" name="OPG" placeholder="Auto" disabled />
+    <input type="number" name="OPG" placeholder="Auto" value="" readonly />
 
     <label>Barrel Doc Link</label>
     <input type="text" name="DocLink" />
@@ -155,7 +155,6 @@
     }
   });
 </script>
-
 
 </body>
 </html>
